--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@ p {
   padding: 10px 10px 10px 10px;
   margin: 10px;
 }
+
+@media (min-width: 620px) {
+  .menu-item {
+    width: 260px;
+    height: 102px;
+    float: left;
+  }
+}
