--- a/style.css
+++ b/style.css
@@ -17,19 +17,62 @@ p {
   line-height: 22px;
 }
 
+ul {
+  -webkit-column-count: 3;
+  -webkit-column-gap: 10px;
+  -webkit-column-fill: auto;
+  -moz-column-count: 3;
+  -moz-column-gap: 10px;
+  -moz-column-fill: auto;
+  column-count: 3;
+  column-gap: 15px;
+  column-fill: auto;
+}
+
 .menu-item {
+  display: inline-block;
   background-color: black;
   color: white;
   border: 2px solid #FFF;
   border-radius: 8px;
   padding: 10px 10px 10px 10px;
   margin: 10px;
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
+  column-break-inside: avoid;
+}
+
+@media (max-width: 620px) {
+  .menu-item {
+    width: 90%;
+  }
+  ul {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
 }
 
 @media (min-width: 620px) {
   .menu-item {
-    width: 260px;
-    height: 102px;
+    width: 90%;
     float: left;
+  }
+  ul {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (min-width: 1100px) {
+  .menu-item {
+    width: 90%;
+    float: left;
+  }
+  ul {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
   }
 }
