--- a/style.css
+++ b/style.css
@@ -2,18 +2,17 @@ body {
   font-family: Helvetica, sans-serif;
   text-align: center;
   background-color: black;
-/*  background-image: url('blackboard.jpg');*/ 
-/*  background-size: cover;*/
 }
 
 h2 {
   color: white;
   display: inline;
-  font-size: 36px;
 }
 
 #nav {
+  position: relative;
   margin: 20px;
+  font-size: 36px;
 }
 
 h3 {
@@ -25,21 +24,30 @@ p {
   line-height: 22px;
 }
 
-.arrow {
-  display: inline;
+.day-navigation {
+  position: absolute;
+  bottom: 3px;
   text-decoration: none;
   color: white;
-  font-size: 36px;
   cursor: pointer;
 }
 
-#right-arrow {
-  float: right;
+#next-day {
+  right: 0;
 }
 
-#left-arrow {
-  float: left;
+#next-day:after {
+  content: ">>";
 }
+
+#previous-day {
+  left: 0;
+}
+
+#previous-day:before {
+  content: "<<";
+}
+
 
 ul {
   -webkit-column-count: 3;
@@ -55,7 +63,6 @@ ul {
 
 .menu-item {
   display: inline-block;
-/*  background-color: black;*/
   background-image: url('blackboard.jpg');
   background-size: cover;
   color: white;
@@ -63,15 +70,19 @@ ul {
   border-radius: 8px;
   padding: 10px 10px 10px 10px;
   margin: 10px;
+  width: 85%;
   -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
   column-break-inside: avoid;
 }
 
-@media (max-width: 620px) {
-  .menu-item {
-    width: 85%;
+@media (max-width: 415px) {
+  #nav {
+    font-size: 28px;
   }
+}
+
+@media (max-width: 620px) {
   ul {
     -webkit-column-count: 1;
     -moz-column-count: 1;
@@ -80,22 +91,28 @@ ul {
 }
 
 @media (min-width: 620px) {
-  .menu-item {
-    width: 85%;
-    float: left;
-  }
   ul {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
   }
+  #next-day:before {
+    content: "next ";
+  }
+  #next-day {
+    font-size: 22px;
+    top: 9px;
+  }
+  #previous-day:after {
+    content: " previous";
+  }
+  #previous-day {
+    font-size: 22px;
+    padding: 12px 0 0 0;
+  }
 }
 
 @media (min-width: 1100px) {
-  .menu-item {
-    width: 85%;
-    float: left;
-  }
   ul {
     -webkit-column-count: 3;
     -moz-column-count: 3;
