--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: Helvetica, sans-serif;
   text-align: center;
   background-color: black;
+  padding: 0 20px 0 20px;
 }
 
 h2 {
@@ -11,7 +12,7 @@ h2 {
 
 #nav {
   position: relative;
-  margin: 20px;
+  margin: 20px 5px 20px 5px;
   font-size: 36px;
 }
 
@@ -51,13 +52,13 @@ p {
 
 ul {
   -webkit-column-count: 3;
-  -webkit-column-gap: 0;
+  -webkit-column-gap: 20px;
   -webkit-column-fill: auto;
   -moz-column-count: 3;
-  -moz-column-gap: 0;
+  -moz-column-gap: 20px;
   -moz-column-fill: auto;
   column-count: 3;
-  column-gap: 0;
+  column-gap: 20px;
   column-fill: auto;
 }
 
@@ -69,8 +70,11 @@ ul {
   border: 2px solid #FFF;
   border-radius: 8px;
   padding: 10px 10px 10px 10px;
-  margin: 10px;
-  width: 85%;
+  margin-bottom: 20px;
+  width: 100%;
+  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box;    
+  box-sizing: border-box;        
   -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
   column-break-inside: avoid;
