--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 h2 {
   color: white;
   display: inline;
+  text-transform: capitalize;
 }
 
 #nav {
@@ -72,9 +73,9 @@ ul {
   padding: 10px 10px 10px 10px;
   margin-bottom: 20px;
   width: 100%;
-  -webkit-box-sizing: border-box; 
-  -moz-box-sizing: border-box;    
-  box-sizing: border-box;        
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
   column-break-inside: avoid;
